# JgsuCampusNetworkManagement

./: .gitignore  CMakeLists.txt  readme.md
component/: CMakeLists.txt  calcMD5.h  myHttp.cpp  myHttp.h
include/: mainwindow.h  settingReader.hpp  windowOfLogin.h
include/component/: httpReader.hpp  myHttp.h  settingFile.hpp
res/: res.qrc
res/json/: host.json  info.json
src/: main.cpp  mainwindow.cpp  mainwindow.h  myHttp.cpp  myHttp.h  mySocket.cpp  mySocket.h  windowOfLogin.cpp  windowOfLogin.h
src/component/: myHttp.cpp
ui/: mainwindow.ui  windowOfLogin.ui
